--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ logging:
       max-history: 3
       total-size-cap: 10MB
       #file-name-pattern: "%d{yyyy-MM-dd HH:mm:ss.SSS} %clr([%-5level]) ${PID:-} --- [%thread] %clr(%-40.40logger{36}){cyan} : %msg%n"
-      file-name-pattern: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] ${PID:-} --- [%thread] %-40.40logger{36} : %msg%n"
+      file-name-pattern: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] ${PID:-} --- [%thread] %-40.40logger{36} : [%M:%L] %msg%n"
 
 
 # mybatis
