--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,15 +20,15 @@ spring:
   #  - 
   application:
     name: springboot-react
-  #datasource: # datasource
-  #  #driver-class-name: org.mariadb.jdbc.Driver
-  #  driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-  #  #url: jdbc:mariadb://localhost:3306/springstudy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true
-  #  url: jdbc:log4jdbc:mariadb://localhost:3306/springstudy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true
-  #  username: atdata
-  #  password: atdata.1!!
-  #  hikari:
-  #    pool-name: HikariPool-${spring.application.name}
+  datasource: # datasource
+    #driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    #url: jdbc:mariadb://localhost:3306/springstudy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true
+    url: jdbc:log4jdbc:mariadb://localhost:3306/springstudy?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true
+    username: atdata
+    password: atdata.1!!
+    hikari:
+      pool-name: HikariPool-${spring.application.name}
   thymeleaf:
     prefix: classpath:/templates/thymeleaf
     suffix: .html
@@ -57,9 +57,12 @@ logging:
 
 
 # mybatis
-#mybatis:
-#  config-location: classpath:mybatis/mybatis-config.xml
-#  mapper-locations: classpath:mybatis/mariadb/**/*.xml
+mybatis:
+  #configuration:
+  #  map-underscore-to-camel-case: true
+  #type-aliases-package: com.study.codingrecipe.board.dto.BoardDto
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapper-locations: classpath:mybatis/mariadb/**/*.xml
 
 
 ## test
